Added features, members sections and editing buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <div class="p-md-3">
-                <button class="btn main-btn"><a href="login.html">Login</a></button>
+                <a class="btn main-btn" href="login.html">Login</a>
             </div>
           </div>
         </div>
@@ -57,7 +57,72 @@
                 We make awesome graphic and web design
             </p>
             <div class="p-md-3 mt-4">
-                <button class="btn main-btn">Get Started</button>
+                <a class="btn main-btn" href="login.html">Get Started</a>
+            </div>
+        </div>
+    </div>
+    <div class="features text-center pt-5 pb-5">
+        <div class="container">
+            <div class="main-title mt-5 mb-5 position-relative">
+                <img class="mb-4" src="img/title.png" alt="title">
+                <h2>We are Good at</h2>
+                <p class="text-uppercase text-black-50">Some Of These Stuff Under</p>
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="icons mt-5 mb-5">
+                            <i class="fa-solid fa-pen-fancy fa-5x"></i>
+                        </div>
+                        <h4 class="text-uppercase">Graphic Design</h4>
+                        <p>
+                            Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                        </p>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="icons mt-5 mb-5">
+                            <i class="fa-solid fa-tv fa-5x"></i>
+                        </div>
+                        <h4 class="text-uppercase">Web Design</h4>
+                        <p>
+                            Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                        </p>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="icons mt-5 mb-5">
+                            <i class="fa-solid fa-square-poll-horizontal fa-5x"></i>
+                        </div>
+                        <h4 class="text-uppercase">Content Creation</h4>
+                        <p>
+                            Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="members text-center pt-5 pb-5">
+        <div class="container">
+            <div class="main-title mt-5 mb-5 position-relative">
+                <img class="mb-4" src="img/title.png" alt="title">
+                <h2>Some Stuff About Us</h2>
+                <p class="text-uppercase text-black-50">THE GREAT TEAM</p>
+            </div>
+            <div class="row justify-content-center">
+                <p class="secondary-para">Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
+            </div>
+            <div class="mt-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-4 text-md-start align-self-center">
+                        <h3 class="mb-3">Retina Design</h3>
+                        <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
+                        <p class="mb-4">Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
+                        <a class="btn secondary-btn text-uppercase mb-5" href="login.html">Order Me Now</a>
+                    </div>
+                    <div class="col-md-8">
+                        <img class="img-fluid" src="img/laptop.png" alt="Laptop">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
